<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fabflix.cinephim.SearchActivity">


    <ProgressBar
        android:id="@+id/search_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />



    <LinearLayout
        android:id="@+id/search_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/search_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/keywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movie_title"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit_search_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submit_search"
                android:textStyle="bold" />

        </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_movies_found_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_movie_list"
            android:textAlignment="center"
            android:textColor="#000000"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/next_back_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/left_chevron"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/right_chevron"
                android:textSize="20sp"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/search_list"
            android:divider="#808080"
            android:dividerHeight="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
